# rtf329c

./: Cargo.toml  README.md
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yaml  release.yaml
crates/duck_move/: Cargo.toml
crates/duck_move/src/: lib.rs
crates/first_person_viewmodel/: Cargo.toml
crates/first_person_viewmodel/src/: lib.rs
crates/fps_player/: Cargo.toml  README.md
crates/fps_player/src/: lib.rs
crates/soundtrack/: Cargo.toml
crates/soundtrack/src/: lib.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
src/: main.rs
