[package]
name = "rtf329c"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"

[dependencies]
bevy = "0.14"
mimalloc = "0.1.43"