[package]
name = "rtf329c"
version = "1.1.0-dev"
edition = "2021"
license = "Apache-2.0"

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"

[dependencies]
mimalloc = "0.1.43"

[dependencies.bevy]
version = "0.14"
features = ["symphonia-vorbis"]

[dependencies.symphonia]
version = "0.5.4" # XXX: keep in sync w/ version used by bevy's rodio
default-features = false
features = ["opt-simd", "ogg"]