[package]
name = "rtf329c"
version = "1.2.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
mimalloc = "0.1.43"
bevy = { workspace = true }
soundtrack = { path = "crates/soundtrack" }
duck_move = { path = "crates/duck_move" }
fps_player = { path = "crates/fps_player" }
#bevy_infinite_grid = "0.13.0"

[workspace]
members = ["crates/*"]

[workspace.dependencies.bevy]
version = "0.14"
features = ["symphonia-vorbis", "wayland"]

[workspace.dependencies.bevy_rapier3d]
version = "0.27"
features = ["enhanced-determinism"]

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
panic = "abort"
lto = "thin"